# Fuzzy.epf

./: .gitignore  README.md  build.ps1
FuzzyComp/: .clang-format  AbstractIndex.h  AsymmetricNGramIndex.h  CMakeLists.txt  CMakePresets.json  ComponentImpl.cpp  ComponentImpl.h  MANIFEST.XML  NGramVector.h  SymmetricNGramIndex.h  comp.def.in  dllmain.cpp  helpers.cpp  helpers.h  vcpkg.json
FuzzyEpf/: FuzzyEpf.xml
FuzzyEpf/FuzzyEpf/Ext/: ObjectModule.bsl
FuzzyEpf/FuzzyEpf/Ext/Help/: ru.html  uk.html
FuzzyEpf/FuzzyEpf/Forms/: Форма.xml
FuzzyEpf/FuzzyEpf/Templates/: FuzzyComp.xml
